--- a/How_is_it_trained.ipynb
+++ b/How_is_it_trained.ipynb
@@ -14,6 +14,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- 至于理论部分，有空再补充"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1 collect_data.py"
    ]
   },
@@ -197,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**注意：请先收集至少一个数据集**"
+    "**注：以下展示的是我本地的数据集，我没有上传，所以要运行以下代码，请先自己收集至少一个数据集**"
    ]
   },
   {
@@ -215,9 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "当前数据集所包含数据量：1894, 每个数据都有 2 个数据，分别是图像数据和按键数据\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -234,9 +249,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "图像 [[81 69 75 ... 55 56 56]\n",
+      " [54 35 34 ... 16 20 21]\n",
+      " [38 36 32 ... 18 18 19]\n",
+      " ...\n",
+      " [46 29 29 ... 65 69 72]\n",
+      " [50 35 34 ... 45 45 47]\n",
+      " [49 34 33 ... 48 48 47]]\n",
+      "形状 (270, 480)\n"
+     ]
+    }
+   ],
    "source": [
     "screen = data[0][0]    # 选取了第一个数据的图像部分\n",
     "print('图像', screen)\n",
@@ -245,9 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "按键记录 [0, 0, 0, 0, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "action_value = data[0][1]    # 选取了第一个数据的按键记录部分\n",
     "print('按键记录', action_value)"
@@ -255,9 +293,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "motion:  攻击, 记录到的次数:   493\n",
+      "motion:  弹反, 记录到的次数:    98\n",
+      "motion:  垫步, 记录到的次数:    59\n",
+      "motion:  跳跃, 记录到的次数:     9\n",
+      "motion:  其他, 记录到的次数:  1235\n"
+     ]
+    }
+   ],
    "source": [
     "# 统计动作分布\n",
     "def motionCounts(Y):\n",
@@ -277,11 +327,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "以视频的形式展示数据(展示前200个)。 要你自己运行才看得见视频\n",
+      " 剩余:  199, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  198, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  197, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  196, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  195, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  194, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  193, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  192, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  191, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  190, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  189, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  188, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  187, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  186, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  185, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  184, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  183, 动作:垫步, [0, 0, 1, 0, 0]\n",
+      " 剩余:  182, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  181, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  180, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  179, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  178, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  177, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  176, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  175, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  174, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  173, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  172, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  171, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  170, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  169, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  168, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  167, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  166, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  165, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  164, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  163, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  162, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  161, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  160, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  159, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  158, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  157, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  156, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  155, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  154, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  153, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:  152, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:  151, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:  150, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  149, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  148, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  147, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  146, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  145, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  144, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  143, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  142, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  141, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  140, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  139, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  138, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  137, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:  136, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:  135, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  134, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:  133, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  132, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  131, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  130, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  129, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:  128, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  127, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  126, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:  125, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  124, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  123, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:  122, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  121, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:  120, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:  119, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  118, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  117, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  116, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  115, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  114, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  113, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:  112, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  111, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  110, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  109, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  108, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  107, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  106, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  105, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  104, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  103, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  102, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:  101, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:  100, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   99, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   98, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   97, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   96, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   95, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   94, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   93, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   92, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   91, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   90, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   89, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   88, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   87, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   86, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   85, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   84, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   83, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   82, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   81, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   80, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   79, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   78, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   77, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   76, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   75, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   74, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   73, 动作:垫步, [0, 0, 1, 0, 0]\n",
+      " 剩余:   72, 动作:垫步, [0, 0, 1, 0, 0]\n",
+      " 剩余:   71, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   70, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   69, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   68, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   67, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   66, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   65, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   64, 动作:垫步, [0, 0, 1, 0, 0]\n",
+      " 剩余:   63, 动作:垫步, [0, 0, 1, 0, 0]\n",
+      " 剩余:   62, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   61, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   60, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   59, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   58, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   57, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   56, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   55, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   54, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   53, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   52, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   51, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   50, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   49, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   48, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   47, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   46, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   45, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   44, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   43, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   42, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   41, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   40, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   39, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   38, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   37, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   36, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   35, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   34, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   33, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   32, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   31, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   30, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   29, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   28, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   27, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   26, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   25, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   24, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   23, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   22, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   21, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   20, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   19, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   18, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   17, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   16, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   15, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   14, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:   13, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   12, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   11, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:   10, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:    9, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:    8, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:    7, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:    6, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:    5, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:    4, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:    3, 动作:弹反, [0, 1, 0, 0, 0]\n",
+      " 剩余:    2, 动作:其他, [0, 0, 0, 0, 1]\n",
+      " 剩余:    1, 动作:攻击, [1, 0, 0, 0, 0]\n",
+      " 剩余:    0, 动作:攻击, [1, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "print('以视频的形式展示数据')\n",
+    "print()\n",
+    "print('以视频的形式展示数据(展示前200个)。', '要你自己运行才看得见视频')\n",
+    "data = data[:200]\n",
     "Remaining = len(data)\n",
     "for screen, action_value in data:\n",
     "    action = np.argmax(action_value)\n",
@@ -620,7 +881,7 @@
     "        if t > 0:\n",
     "            time.sleep(t)\n",
     "\n",
-    "        if 'P' in keys:\n",
+    "        if 'P' in keys or step == 1000:\n",
     "            if train:\n",
     "                sekiro_agent.save_evaluate_network()    # 学习完毕，保存网络权重\n",
     "            sekiro_agent.reward_system.save_reward_curve(save_path='learn_online.png')    # 绘制 reward 曲线并保存在当前目录\n",
