Increase output key

--- a/How_is_it_trained.ipynb
+++ b/How_is_it_trained.ipynb
@@ -53,18 +53,37 @@
     "~~~python\n",
     "def get_output(keys):    # 对按键信息进行独热编码\n",
     "\n",
-    "    output = [0, 0, 0, 0, 0]\n",
+    "    output = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
     "\n",
+    "    # 攻击、防御、垫步、跳跃和使用道具不能同时进行，但是可以和移动同时进行\n",
     "    if   'J' in keys:\n",
-    "        output[0] = 1    # 等同于[1, 0, 0, 0, 0]\n",
+    "        output[0] = 1    # 等同于[1, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
     "    elif 'K' in keys:\n",
-    "        output[1] = 1    # 等同于[0, 1, 0, 0, 0]\n",
+    "        output[1] = 1    # 等同于[0, 1, 0, 0, 0, 0, 0, 0, 0, 0]\n",
     "    elif 'LSHIFT' in keys:\n",
-    "        output[2] = 1    # 等同于[0, 0, 1, 0, 0]\n",
+    "        output[2] = 1    # 等同于[0, 0, 1, 0, 0, 0, 0, 0, 0, 0]\n",
     "    elif 'SPACE' in keys:\n",
-    "        output[3] = 1    # 等同于[0, 0, 0, 1, 0]\n",
+    "        output[3] = 1    # 等同于[0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+    "    elif 'R' in keys:\n",
+    "        output[5] = 1    # 等同于[0, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
     "    else:\n",
-    "        output[4] = 1    # 等同于[0, 0, 0, 0, 1]\n",
+    "        output[4] = 1    # 等同于[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
+    "\n",
+    "    # 不能同时前后移动\n",
+    "    if   'W' in keys:\n",
+    "        output[6] = 1    # 等同于[0, 0, 0, 0, 0, 0, 1, 0, 0, 0]\n",
+    "    elif 'S' in keys:\n",
+    "        output[7] = 1    # 等同于[0, 0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
+    "    else:\n",
+    "        output[4] = 1    # 等同于[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
+    "\n",
+    "    # 不能同时左右移动\n",
+    "    if   'A' in keys:\n",
+    "        output[8] = 1    # 等同于[0, 0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
+    "    elif 'D' in keys:\n",
+    "        output[9] = 1    # 等同于[0, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
+    "    else:\n",
+    "        output[4] = 1    # 等同于[0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n",
     "\n",
     "    return output\n",
     "~~~"
@@ -181,7 +200,7 @@
     "screen = get_screen()    # 获取屏幕图像\n",
     "if not (np.sum(screen == 0) > 5000):    # 正常情况下不会有那么多值为0的像素点，除非黑屏了\n",
     "    action_onehot = get_output(keys)    # 获取按键输出\n",
-    "    action = np.argmax(action_onehot)\n",
+    "    action = np.argmax(action_onehot[:5])\n",
     "    self.dataset.append([screen, action_onehot])    # 图像和输出打包在一起，保证一一对应\n",
     "\n",
     "    reward = self.reward_system.get_reward(get_status(screen, show=True))    # 计算 reward\n",
@@ -222,17 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "当前数据集所包含数据量：1894, 每个数据都有 2 个数据，分别是图像数据和按键数据\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -249,24 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "图像 [[81 69 75 ... 55 56 56]\n",
-      " [54 35 34 ... 16 20 21]\n",
-      " [38 36 32 ... 18 18 19]\n",
-      " ...\n",
-      " [46 29 29 ... 65 69 72]\n",
-      " [50 35 34 ... 45 45 47]\n",
-      " [49 34 33 ... 48 48 47]]\n",
-      "形状 (270, 480)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "screen = data[0][0]    # 选取了第一个数据的图像部分\n",
     "print('图像', screen)\n",
@@ -275,17 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "按键记录 [0, 0, 0, 0, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "action_value = data[0][1]    # 选取了第一个数据的按键记录部分\n",
     "print('按键记录', action_value)"
@@ -293,26 +281,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "motion:  攻击, 记录到的次数:   493\n",
-      "motion:  弹反, 记录到的次数:    98\n",
-      "motion:  垫步, 记录到的次数:    59\n",
-      "motion:  跳跃, 记录到的次数:     9\n",
-      "motion:  其他, 记录到的次数:  1235\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 统计动作分布\n",
     "def motionCounts(Y):\n",
     "\n",
-    "    columns=['攻击', '弹反', '垫步', '跳跃', '其他']\n",
+    "    columns=['攻击', '弹反', '垫步', '跳跃', '其他', '道具', '向前', '向后', '向左', '向右']\n",
     "    df = pd.DataFrame(Y, columns=columns, dtype=np.uint8)\n",
     "    \n",
     "    total = len(df)\n",
@@ -327,218 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "以视频的形式展示数据(展示前200个)。 要你自己运行才看得见视频\n",
-      " 剩余:  199, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  198, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  197, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  196, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  195, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  194, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  193, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  192, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  191, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  190, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  189, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  188, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  187, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  186, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  185, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  184, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  183, 动作:垫步, [0, 0, 1, 0, 0]\n",
-      " 剩余:  182, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  181, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  180, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  179, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  178, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  177, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  176, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  175, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  174, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  173, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  172, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  171, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  170, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  169, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  168, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  167, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  166, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  165, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  164, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  163, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  162, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  161, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  160, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  159, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  158, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  157, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  156, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  155, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  154, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  153, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:  152, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:  151, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:  150, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  149, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  148, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  147, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  146, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  145, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  144, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  143, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  142, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  141, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  140, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  139, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  138, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  137, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:  136, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:  135, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  134, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:  133, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  132, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  131, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  130, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  129, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:  128, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  127, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  126, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:  125, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  124, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  123, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:  122, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  121, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:  120, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:  119, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  118, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  117, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  116, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  115, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  114, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  113, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:  112, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  111, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  110, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  109, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  108, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  107, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  106, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  105, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  104, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  103, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  102, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:  101, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:  100, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   99, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   98, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   97, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   96, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   95, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   94, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   93, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   92, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   91, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   90, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   89, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   88, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   87, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   86, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   85, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   84, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   83, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   82, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   81, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   80, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   79, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   78, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   77, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   76, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   75, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   74, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   73, 动作:垫步, [0, 0, 1, 0, 0]\n",
-      " 剩余:   72, 动作:垫步, [0, 0, 1, 0, 0]\n",
-      " 剩余:   71, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   70, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   69, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   68, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   67, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   66, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   65, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   64, 动作:垫步, [0, 0, 1, 0, 0]\n",
-      " 剩余:   63, 动作:垫步, [0, 0, 1, 0, 0]\n",
-      " 剩余:   62, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   61, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   60, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   59, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   58, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   57, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   56, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   55, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   54, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   53, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   52, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   51, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   50, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   49, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   48, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   47, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   46, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   45, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   44, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   43, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   42, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   41, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   40, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   39, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   38, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   37, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   36, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   35, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   34, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   33, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   32, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   31, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   30, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   29, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   28, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   27, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   26, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   25, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   24, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   23, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   22, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   21, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   20, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   19, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   18, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   17, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   16, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   15, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   14, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:   13, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   12, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   11, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:   10, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:    9, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:    8, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:    7, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:    6, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:    5, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:    4, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:    3, 动作:弹反, [0, 1, 0, 0, 0]\n",
-      " 剩余:    2, 动作:其他, [0, 0, 0, 0, 1]\n",
-      " 剩余:    1, 动作:攻击, [1, 0, 0, 0, 0]\n",
-      " 剩余:    0, 动作:攻击, [1, 0, 0, 0, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print()\n",
     "print('以视频的形式展示数据(展示前200个)。', '要你自己运行才看得见视频')\n",
@@ -562,7 +329,7 @@
     "    cv2.waitKey(30)\n",
     "\n",
     "    Remaining -= 1\n",
-    "    print(f'\\r 剩余: {Remaining:>4}, 动作:{a}, {action_value}', end='\\n') # end=''\n",
+    "    print(f'\\r 剩余: {Remaining:>4}, 动作:{action_value}', end='\\n') # end=''\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):    # 按 q 键关闭视频\n",
     "        cv2.destroyAllWindows()\n",
     "        break\n",
@@ -678,7 +445,7 @@
     "~~~python\n",
     "# 数据集处理成预训练格式\n",
     "X = np.array([roi(i[0], x, x_w, y, y_h) for i in data]).reshape(-1, ROI_WIDTH, ROI_HEIGHT, FRAME_COUNT)\n",
-    "Y = np.array([i[1] for i in data])\n",
+    "Y = np.array([i[1][:5] for i in data])\n",
     "\n",
     "# 训练模型，然后保存\n",
     "model.fit(X, Y, batch_size=batch_size, epochs=epochs, verbose=1)\n",
