--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -57,11 +57,14 @@
     "    'S' : 0x53,\n",
     "    'A' : 0x41,\n",
     "    'D' : 0x44,\n",
+    "    'LSHIFT' : 0xA0,\n",
+    "    'SPACE'  : 0x20,\n",
     "\n",
     "    'J' : 0x4A,\n",
+    "    # 'LCONTROL' : 0xA2,\n",
     "    'K' : 0x4B,\n",
-    "    'SPACE'    : 0x20,\n",
-    "    'LSHIFT'   : 0xA0,\n",
+    "    #'F' : 0x46,\n",
+    "    'R' : 0x52,\n",
     "\n",
     "    'T' : 0x54,\n",
     "    'P' : 0x50\n",
@@ -84,7 +87,7 @@
     "~~~python\n",
     "def key_check():\n",
     "    keys = []\n",
-    "    for key in ['W', 'S', 'A', 'D', 'J', 'K', 'SPACE', 'LSHIFT', 'T', 'P']:\n",
+    "    for key in ['W', 'S', 'A', 'D', 'LSHIFT', 'SPACE', 'J', 'K', 'R', 'T', 'P']:\n",
     "        if wapi.GetAsyncKeyState(vk[key]):\n",
     "            keys.append(key)\n",
     "    return keys\n",
@@ -107,7 +110,7 @@
     "from pysekiro.get_keys import key_check\n",
     "while True:\n",
     "    keys = key_check()\n",
-    "    print(f'\\r{str(keys):<60}', end = '')\n",
+    "    print(f'\\r{str(keys):<64}', end = '')\n",
     "    if 'P' in keys:\n",
     "        break"
    ]
@@ -196,11 +199,16 @@
     "    'S' : 0x1F,\n",
     "    'A' : 0x1E,\n",
     "    'D' : 0x20,\n",
+    "    'LSHIFT' : 0x2A,\n",
+    "    'SPACE'  : 0x39,\n",
+    "\n",
+    "    # 'Y' : 0x15,\n",
     "\n",
     "    'J' : 0x24,\n",
+    "    # 'LCONTROL' : 0x1D,\n",
     "    'K' : 0x25,\n",
-    "    'SPACE'    : 0x39,\n",
-    "    'LSHIFT'   : 0x2A,\n",
+    "    # 'F' : 0x21,\n",
+    "    'R' : 0x13,\n",
     "}\n",
     "~~~"
    ]
@@ -224,7 +232,7 @@
     "# 然后按照下面的示例定义执行相应动作的函数 \n",
     "def Move_Forward():    # 移动 前\n",
     "    PressKey(dk['W'])      # 压键\n",
-    "    time.sleep(1)    # 按键时长（控制长按短按）\n",
+    "    time.sleep(0.1)    # 按键时长（控制长按短按）\n",
     "    ReleaseKey(dk['W'])    # 松键\n",
     "~~~"
    ]
@@ -247,36 +255,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[collect_data.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/collect_data.py) 中的 get_output() 影响的就是这里  \n",
-    "~~~python\n",
-    "\"\"\"\n",
-    "- 'J'      -> 0 -> Attack\n",
-    "- 'k'      -> 1 -> Deflect\n",
-    "- 'LSHIFT' -> 2 -> Step_Dodge\n",
-    "- 'SPACE'  -> 3 -> Jump\n",
-    "-          -> 4 -> \n",
-    "\"\"\"\n",
-    "~~~"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "~~~python\n",
     "# 根据 collect_data.py 中的 get_output()\n",
     "def act(action):\n",
     "    \n",
     "    if   action == 0:\n",
-    "        act = Attack     # 攻击\n",
+    "        act = Attack       # 攻击\n",
     "    elif action == 1:\n",
-    "        act = Deflect    # 弹反\n",
+    "        act = Deflect      # 弹反\n",
     "    elif action == 2:\n",
-    "        act = Step_Dodge # 垫步\n",
+    "        act = Step_Dodge   # 垫步\n",
     "    elif action == 3:\n",
-    "        act = Jump       # 跳跃\n",
+    "        act = Jump         # 跳跃\n",
     "    elif action == 4:\n",
-    "        act = Move_Forward # 其他（暂时用 移动 前 替代）\n",
+    "        act = NOKEY        # 无键\n",
     "\n",
     "    act_process = threading.Thread(target=act)\n",
     "    act_process.start()\n",
